@@ -1,5 +1,14 @@
 2006-12-20  Edward Hervey  <edward@fluendo.com>
 
+	* pitivi/bin.py:
+	* pitivi/elements/singledecodebin.py:
+	* pitivi/elements/smartscale.py:
+	* pitivi/objectfactory.py:
+	* pitivi/timeline.py:
+	Activate pads before adding them to an element.
+
+2006-12-20  Edward Hervey  <edward@fluendo.com>
+
 	* po/POTFILES.in:
 	pitivi/ui/discoverererrordialog.glade is now
 	pitivi/ui/filelisterrordialog.glade.
